<resources>
    <string name="action_settings">Settings</string>
    <string name="action_biblioteca">Libros</string>
    <string name="action_cerrar">Cerrar</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_prestamos">Préstamos</string>
    <string name="action_usuarios">Usuarios</string>
    <string name="app_name">Biblioteca SENA</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="button_registrar">Registrar</string>
    <string name="label_apellidos">Apellidos completos</string>
    <string name="label_biblioteca">Biblioteca</string>
    <string name="label_biblioteca_slogan">Conocimiento en la palma de tu mano</string>
    <string name="label_bienvenido">Bienvenido</string>
    <string name="label_buscar_libro">Buscar libro</string>
    <string name="label_buscar_usuario">Buscar usuario</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_confirmar_contrasena">Confirmar contraseña</string>
    <string name="label_correo">Correo electrónico</string>
    <string name="label_contrasena">Contraseña</string>
    <string name="label_id">Número de cédula</string>
    <string name="label_nombres">Nombres completos</string>
    <string name="label_panel">Panel</string>
    <string name="label_recordar">Recordar</string>
    <string name="label_registrarse">Registrarse</string>
    <string name="label_registro">Registro</string>
</resources>
