<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_admin_perfil"
        android:title="@string/action_perfil"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_admin_biblioteca"
        android:title="@string/action_biblioteca"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_admin_prestamos"
        android:title="@string/action_prestamos"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_admin_usuarios"
        android:title="@string/action_usuarios"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_cerrar"
        android:title="@string/action_cerrar"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>