<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegistrolActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_biblioteca"
            android:id="@+id/tvBiblioteca"
            android:textStyle="bold"
            android:textSize="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSENA"
            android:src="@drawable/ic_sena"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_biblioteca_slogan"
            android:id="@+id/tvSlogan"
            android:layout_below="@+id/tvBiblioteca"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo"
            android:text="@string/label_registro"
            android:textColor="#ff6600"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/ivSENA"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ScrollView
            android:layout_below="@+id/tvTitulo"
            android:layout_alignRight="@+id/ivSENA"
            android:layout_alignEnd="@+id/ivSENA"
            android:id="@+id/scrollView"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etNumeroCedula"
                    android:hint="@string/label_id" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etNombres"
                    android:layout_alignTop="@+id/etNumeroCedula"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="34dp"
                    android:hint="@string/label_nombres" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etApellidos"
                    android:layout_alignTop="@+id/etNombres"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="34dp"
                    android:hint="@string/label_apellidos" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCorreo"
                    android:layout_alignTop="@+id/etApellidos"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="34dp"
                    android:hint="@string/label_correo" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etContrasena"
                    android:layout_alignTop="@+id/etCorreo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="56dp"
                    android:hint="@string/label_contrasena" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etConfirmarContrasena"
                    android:layout_alignTop="@+id/etContrasena"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="34dp"
                    android:hint="@string/label_confirmar_contrasena" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_registrar"
                    android:id="@+id/btnRegistrar"
                    android:layout_alignTop="@+id/etConfirmarContrasena"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="56dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cancelar"
                    android:id="@+id/tvRegistrarse"
                    android:layout_alignTop="@+id/btnRegistrar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="64dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />


            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>


</RelativeLayout>