<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_biblioteca"
        android:id="@+id/tvBiblioteca"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNumeroCedula"
        android:hint="@string/label_id"
        android:layout_below="@+id/ivSENA"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContrasena"
        android:hint="@string/label_contrasena"
        android:layout_below="@+id/etNumeroCedula"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ingresar"
        android:id="@+id/btnIngresar"
        android:layout_marginTop="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etContrasena" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_registrarse"
        android:id="@+id/tvRegistrarse"
        android:layout_marginTop="21dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btnIngresar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivSENA"
        android:src="@drawable/ic_sena"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_biblioteca_slogan"
        android:id="@+id/tvSlogan"
        android:layout_below="@+id/tvBiblioteca"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="10dp" />

</RelativeLayout>
